--- a/druid/Dockerfile
+++ b/druid/Dockerfile
@@ -46,16 +46,16 @@ WORKDIR /tmp/druid
 
 # package and install Druid locally
 # use versions-maven-plugin 2.1 to work around https://jira.codehaus.org/browse/MVERSIONS-285
-RUN mvn -U -B org.codehaus.mojo:versions-maven-plugin:2.1:set -DgenerateBackupPoms=false -DnewVersion=$DRUID_VERSION \
-  && mvn -U -B install -DskipTests=true -Dmaven.javadoc.skip=true \
-  && cp services/target/druid-services-$DRUID_VERSION-selfcontained.jar /usr/local/druid/lib \
-  && cp -r distribution/target/extensions /usr/local/druid/ \
-  && cp -r distribution/target/hadoop-dependencies /usr/local/druid/ \
-  && rm -rf /tmp/* \
-            /var/tmp/* \
-            /usr/local/apache-maven-3.3.9 \
-            /usr/local/apache-maven \
-            /root/.m2
+#RUN mvn -U -B org.codehaus.mojo:versions-maven-plugin:2.1:set -DgenerateBackupPoms=false -DnewVersion=$DRUID_VERSION \
+#  && mvn -U -B install -DskipTests=true -Dmaven.javadoc.skip=true \
+#  && cp services/target/druid-services-$DRUID_VERSION-selfcontained.jar /usr/local/druid/lib \
+#  && cp -r distribution/target/extensions /usr/local/druid/ \
+#  && cp -r distribution/target/hadoop-dependencies /usr/local/druid/ \
+#  && rm -rf /tmp/* \
+#            /var/tmp/* \
+#            /usr/local/apache-maven-3.3.9 \
+#            /usr/local/apache-maven \
+#            /root/.m2
 
 WORKDIR /usr/local/druid
 
